<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Target Discriminator</string>
    <string name="splash_loading">Loading...</string>
    <string name="session_config_title">Session Configuration</string>
    <string name="session_config_include_videos">Include Videos</string>
    <string name="session_config_include_photos">Include Photos</string>
    <string name="session_config_duration">Session Duration (minutes)</string>
    <string name="session_config_start">Start Session</string>
    <string name="training_session_tap_threat">Tap for Threat</string>
    <string name="training_session_swipe_non_threat">Swipe for Non-Threat</string>
    <string name="feedback_correct">Correct</string>
    <string name="feedback_incorrect">Incorrect</string>
    <string name="session_complete">Session Complete</string>
    <string name="training_instructions">Tap the screen when you have positively identified the threat and have a clean shot. Swipe the screen when you have identified no threat exists. For videos, allow the video to end without tapping if no threat is identified.</string>
    <string name="age_verification_title">Content Warning</string>
    <string name="age_verification_warning">This application contains graphic content that may be disturbing. The training materials include realistic scenarios that may not be suitable for all audiences.</string>
    <string name="age_verification_question">Are you 18 years of age or older?</string>
    <string name="age_verification_confirm">Yes, I am 18 or older</string>
    <string name="age_verification_exit">No, I am under 18</string>
    <string name="media_management_title">Manage Media</string>
    <string name="media_management_import_photo">Import Photo</string>
    <string name="media_management_import_video">Import Video</string>
    <string name="media_management_filter_all">All</string>
    <string name="media_management_filter_photos">Photos</string>
    <string name="media_management_filter_videos">Videos</string>
    <string name="media_management_filter_threat">Threat</string>
    <string name="media_management_filter_non_threat">Non-Threat</string>
    <string name="media_management_empty">No media imported yet</string>
    <string name="media_management_delete">Delete</string>
    <string name="media_management_select_threat_type">Select Threat Type</string>
    <string name="media_management_threat">Threat</string>
    <string name="media_management_non_threat">Non-Threat</string>
    <string name="media_management_cancel">Cancel</string>
    <string name="threat_labels_title">Threat Labels</string>
    <string name="threat_labels_description">Choose how threat and non-threat are labeled throughout the app</string>
    <string name="threat_labels_preset_threat_non_threat">Threat / Non-Threat</string>
    <string name="threat_labels_preset_shoot_no_shoot">Shoot / No-Shoot</string>
    <string name="threat_labels_preset_custom">Custom</string>
    <string name="threat_labels_custom_threat_label">Threat Label</string>
    <string name="threat_labels_custom_non_threat_label">Non-Threat Label</string>
</resources>

